// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DDialog Should append the container to the props.target 1`] = `
<div id="custom-target"><transition-stub enteractiveclass="backdropTransitionEnterActive" leaveactiveclass="backdropTransitionLeaveActive" appear="false" persisted="false" css="true">
    <div class="dBackdrop transitionFast" style="--background-color: var(--color-primary-background); --opacity: 0.5; --z-index: 1000; --position: fixed;"></div>
  </transition-stub><transition-stub enteractiveclass="transitionEnterActive" leaveactiveclass="transitionLeaveActive" appear="false" persisted="false" css="true">
    <dialog open="" role="dialog" aria-modal="true" class="dDialog colorSchemePrimary paddingEqualLarge paddingEqual roundingLarge sizeLarge transitionFast" style="--min-width: 25%; --max-width: 25%; --min-height: 25%; --max-height: 25%; --z-index: 1001;">
      <div class="header"><!----><button class="dButton borderPrimarySmall colorSchemePrimary fontSmall outlinePrimarySmall paddingEqualSmall paddingEqual roundingMedium sizeSmall transitionFast closeButton" id="customFocusId">⛌<!----></button></div>
      <div class="content fontHuge">Plain string content</div>
      <div class="footer"><button class="dButton borderSecondaryMedium colorSchemeSecondary fontMedium outlineSecondaryMedium paddingDefaultMedium paddingDefault roundingMedium sizeMedium transitionFast cancelButton">🛇<!----></button><button class="dButton borderPrimaryMedium colorSchemePrimary fontMedium outlinePrimaryMedium paddingDefaultMedium paddingDefault roundingMedium sizeMedium transitionFast acceptButton">🗸<!----></button></div>
    </dialog>
  </transition-stub></div>
<div data-v-app=""><!--teleport start--><!--teleport end--></div>
`;

exports[`DDialog Should render props.content to the component element 1`] = `<div class="content fontHuge"><b>Some html content</b></div>`;

exports[`DDialog Shouldn't move the container to the props.target if props.enableInline is true 1`] = `
<div id="custom-target"></div>
<div data-v-app=""><!--teleport start--><transition-stub enteractiveclass="backdropTransitionEnterActive" leaveactiveclass="backdropTransitionLeaveActive" appear="false" persisted="false" css="true">
    <div class="dBackdrop transitionFast" style="--background-color: var(--color-primary-background); --opacity: 0.5; --z-index: 1000; --position: fixed;"></div>
  </transition-stub><transition-stub enteractiveclass="transitionEnterActive" leaveactiveclass="transitionLeaveActive" appear="false" persisted="false" css="true">
    <dialog open="" role="dialog" aria-modal="true" class="dDialog colorSchemePrimary paddingEqualLarge paddingEqual roundingLarge sizeLarge transitionFast" style="--min-width: 25%; --max-width: 25%; --min-height: 25%; --max-height: 25%; --z-index: 1001;">
      <div class="header"><!----><button class="dButton borderPrimarySmall colorSchemePrimary fontSmall outlinePrimarySmall paddingEqualSmall paddingEqual roundingMedium sizeSmall transitionFast closeButton" id="why-not">⛌<!----></button></div>
      <div class="content fontHuge">Plain string content</div>
      <div class="footer"><button class="dButton borderSecondaryMedium colorSchemeSecondary fontMedium outlineSecondaryMedium paddingDefaultMedium paddingDefault roundingMedium sizeMedium transitionFast cancelButton">🛇<!----></button><button class="dButton borderPrimaryMedium colorSchemePrimary fontMedium outlinePrimaryMedium paddingDefaultMedium paddingDefault roundingMedium sizeMedium transitionFast acceptButton">🗸<!----></button></div>
    </dialog>
  </transition-stub><!--teleport end--></div>
`;
